promptdslcore/grammar/.antlr/PromptDSLParser.java
// Generated from d:/work/promptDSL/promptdslcore/grammar/PromptDSLParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PromptDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STRING_TYPE=1, FLOAT_TYPE=2, INT_TYPE=3, PROMPT=4, PARAMS=5, SYSTEM=6, 
		USER=7, NOTE=8, INPUT=9, OUTPUT=10, FORMAT=11, TYPE=12, STRUCT=13, BEFORE=14, 
		SCHEMA=15, PARSE=16, JSONFIX=17, MARKDOWN=18, IF=19, ELSE=20, OUTPUTSPEC=21, 
		FOR=22, RANGE=23, SWITCH=24, DEFAULT=25, CASE=26, FIX=27, AFTER=28, ARRAY_OUTPUTSPEC=29, 
		LBRACE=30, RBRACE=31, LPAREN=32, RPAREN=33, COLON=34, EQUAL=35, COMMA=36, 
		DOT=37, EQEQ=38, NOTEQ=39, AT=40, MD=41, JSON=42, LBRACK=43, RBRACK=44, 
		INCREMENT=45, DECREMENT=46, MINUS=47, STAR=48, SLASH=49, MOD=50, UNDERSCORE=51, 
		PLUSEQ=52, MINUSEQ=53, MULTEQ=54, DIVEQ=55, MODEQ=56, DECL_ASSIGN=57, 
		LT=58, LTE=59, GT=60, GTE=61, ID=62, STRING=63, NUMBER=64, BOOL=65, PIPE=66, 
		SEMI=67, PLUS=68, WS=69, LINE_COMMENT=70, BLOCK_COMMENT=71, CODE_STRING=72, 
		CODE_TEXT=73;
	public static final int
		RULE_promptFile = 0, RULE_promptDef = 1, RULE_promptBlock = 2, RULE_inputSection = 3, 
		RULE_outputSection = 4, RULE_outputStruct = 5, RULE_outputMarkdown = 6, 
		RULE_beforeSection = 7, RULE_beforeContent = 8, RULE_varDef = 9, RULE_systemSection = 10, 
		RULE_sysContent = 11, RULE_userSection = 12, RULE_userContent = 13, RULE_moduleDef = 14, 
		RULE_moduleContent = 15, RULE_thencontent = 16, RULE_elsecontent = 17, 
		RULE_forcontent = 18, RULE_ifStatement = 19, RULE_condition = 20, RULE_forStatement = 21, 
		RULE_assignExpr = 22, RULE_updateExpr = 23, RULE_switchStatement = 24, 
		RULE_switchCase = 25, RULE_switchDefault = 26, RULE_typeCase = 27, RULE_typeDefault = 28, 
		RULE_typeName = 29, RULE_dslCallExpr = 30, RULE_expr = 31, RULE_fieldDef = 32, 
		RULE_textLine = 33, RULE_paramPath = 34, RULE_structDef = 35, RULE_annotation = 36, 
		RULE_annotationArgs = 37, RULE_annotationValue = 38, RULE_arrayLiteral = 39, 
		RULE_defaultAnnotation = 40, RULE_fixSection = 41, RULE_afterSection = 42, 
		RULE_codeBlockContent = 43, RULE_type = 44, RULE_value = 45, RULE_formatType = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"promptFile", "promptDef", "promptBlock", "inputSection", "outputSection", 
			"outputStruct", "outputMarkdown", "beforeSection", "beforeContent", "varDef", 
			"systemSection", "sysContent", "userSection", "userContent", "moduleDef", 
			"moduleContent", "thencontent", "elsecontent", "forcontent", "ifStatement", 
			"condition", "forStatement", "assignExpr", "updateExpr", "switchStatement", 
			"switchCase", "switchDefault", "typeCase", "typeDefault", "typeName", 
			"dslCallExpr", "expr", "fieldDef", "textLine", "paramPath", "structDef", 
			"annotation", "annotationArgs", "annotationValue", "arrayLiteral", "defaultAnnotation", 
			"fixSection", "afterSection", "codeBlockContent", "type", "value", "formatType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'string'", "'float'", "'int'", "'prompt'", "'params'", "'system'", 
			"'user'", "'note'", "'input'", "'output'", "'format'", "'type'", "'struct'", 
			"'before'", "'schema'", "'parse'", "'jsonfix'", "'markdown'", "'if'", 
			"'else'", "'outputspec'", "'for'", "'range'", "'switch'", "'default'", 
			"'case'", null, null, null, "'{'", null, "'('", "')'", "':'", "'='", 
			"','", "'.'", "'=='", "'!='", "'@'", "'md'", "'json'", "'['", "']'", 
			"'++'", "'--'", "'-'", "'*'", "'/'", "'%'", "'_'", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "':='", "'<'", "'<='", "'>'", "'>='", null, null, null, 
			null, "'|'", "';'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STRING_TYPE", "FLOAT_TYPE", "INT_TYPE", "PROMPT", "PARAMS", "SYSTEM", 
			"USER", "NOTE", "INPUT", "OUTPUT", "FORMAT", "TYPE", "STRUCT", "BEFORE", 
			"SCHEMA", "PARSE", "JSONFIX", "MARKDOWN", "IF", "ELSE", "OUTPUTSPEC", 
			"FOR", "RANGE", "SWITCH", "DEFAULT", "CASE", "FIX", "AFTER", "ARRAY_OUTPUTSPEC", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", "EQUAL", "COMMA", "DOT", 
			"EQEQ", "NOTEQ", "AT", "MD", "JSON", "LBRACK", "RBRACK", "INCREMENT", 
			"DECREMENT", "MINUS", "STAR", "SLASH", "MOD", "UNDERSCORE", "PLUSEQ", 
			"MINUSEQ", "MULTEQ", "DIVEQ", "MODEQ", "DECL_ASSIGN", "LT", "LTE", "GT", 
			"GTE", "ID", "STRING", "NUMBER", "BOOL", "PIPE", "SEMI", "PLUS", "WS", 
			"LINE_COMMENT", "BLOCK_COMMENT", "CODE_STRING", "CODE_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PromptDSLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PromptDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PromptDSLParser.EOF, 0); }
		public List<PromptDefContext> promptDef() {
			return getRuleContexts(PromptDefContext.class);
		}
		public PromptDefContext promptDef(int i) {
			return getRuleContext(PromptDefContext.class,i);
		}
		public PromptFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptFile; }
	}

	public final PromptFileContext promptFile() throws RecognitionException {
		PromptFileContext _localctx = new PromptFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_promptFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(94);
				promptDef();
				}
				}
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PROMPT );
			setState(99);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptDefContext extends ParserRuleContext {
		public TerminalNode PROMPT() { return getToken(PromptDSLParser.PROMPT, 0); }
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<PromptBlockContext> promptBlock() {
			return getRuleContexts(PromptBlockContext.class);
		}
		public PromptBlockContext promptBlock(int i) {
			return getRuleContext(PromptBlockContext.class,i);
		}
		public PromptDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptDef; }
	}

	public final PromptDefContext promptDef() throws RecognitionException {
		PromptDefContext _localctx = new PromptDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_promptDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(PROMPT);
			setState(102);
			match(ID);
			setState(103);
			match(LBRACE);
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				promptBlock();
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4611687118341670592L) != 0) );
			setState(109);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PromptBlockContext extends ParserRuleContext {
		public InputSectionContext inputSection() {
			return getRuleContext(InputSectionContext.class,0);
		}
		public OutputSectionContext outputSection() {
			return getRuleContext(OutputSectionContext.class,0);
		}
		public SystemSectionContext systemSection() {
			return getRuleContext(SystemSectionContext.class,0);
		}
		public UserSectionContext userSection() {
			return getRuleContext(UserSectionContext.class,0);
		}
		public AfterSectionContext afterSection() {
			return getRuleContext(AfterSectionContext.class,0);
		}
		public FixSectionContext fixSection() {
			return getRuleContext(FixSectionContext.class,0);
		}
		public ModuleDefContext moduleDef() {
			return getRuleContext(ModuleDefContext.class,0);
		}
		public PromptBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_promptBlock; }
	}

	public final PromptBlockContext promptBlock() throws RecognitionException {
		PromptBlockContext _localctx = new PromptBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_promptBlock);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INPUT:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				inputSection();
				}
				break;
			case OUTPUT:
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				outputSection();
				}
				break;
			case SYSTEM:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				systemSection();
				}
				break;
			case USER:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				userSection();
				}
				break;
			case AFTER:
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				afterSection();
				}
				break;
			case FIX:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				fixSection();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(117);
				moduleDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputSectionContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(PromptDSLParser.INPUT, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public InputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputSection; }
	}

	public final InputSectionContext inputSection() throws RecognitionException {
		InputSectionContext _localctx = new InputSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(INPUT);
			setState(121);
			match(LBRACE);
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				fieldDef();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(127);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputSectionContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(PromptDSLParser.OUTPUT, 0); }
		public OutputStructContext outputStruct() {
			return getRuleContext(OutputStructContext.class,0);
		}
		public OutputMarkdownContext outputMarkdown() {
			return getRuleContext(OutputMarkdownContext.class,0);
		}
		public List<DefaultAnnotationContext> defaultAnnotation() {
			return getRuleContexts(DefaultAnnotationContext.class);
		}
		public DefaultAnnotationContext defaultAnnotation(int i) {
			return getRuleContext(DefaultAnnotationContext.class,i);
		}
		public OutputSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputSection; }
	}

	public final OutputSectionContext outputSection() throws RecognitionException {
		OutputSectionContext _localctx = new OutputSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_outputSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(129);
				defaultAnnotation();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(OUTPUT);
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACE:
				{
				setState(136);
				outputStruct();
				}
				break;
			case COLON:
				{
				setState(137);
				outputMarkdown();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputStructContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<FieldDefContext> fieldDef() {
			return getRuleContexts(FieldDefContext.class);
		}
		public FieldDefContext fieldDef(int i) {
			return getRuleContext(FieldDefContext.class,i);
		}
		public OutputStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputStruct; }
	}

	public final OutputStructContext outputStruct() throws RecognitionException {
		OutputStructContext _localctx = new OutputStructContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_outputStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(LBRACE);
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				fieldDef();
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(146);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputMarkdownContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(PromptDSLParser.COLON, 0); }
		public TerminalNode MARKDOWN() { return getToken(PromptDSLParser.MARKDOWN, 0); }
		public OutputMarkdownContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputMarkdown; }
	}

	public final OutputMarkdownContext outputMarkdown() throws RecognitionException {
		OutputMarkdownContext _localctx = new OutputMarkdownContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_outputMarkdown);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(COLON);
			setState(149);
			match(MARKDOWN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeforeSectionContext extends ParserRuleContext {
		public TerminalNode BEFORE() { return getToken(PromptDSLParser.BEFORE, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<BeforeContentContext> beforeContent() {
			return getRuleContexts(BeforeContentContext.class);
		}
		public BeforeContentContext beforeContent(int i) {
			return getRuleContext(BeforeContentContext.class,i);
		}
		public BeforeSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beforeSection; }
	}

	public final BeforeSectionContext beforeSection() throws RecognitionException {
		BeforeSectionContext _localctx = new BeforeSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_beforeSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(BEFORE);
			setState(152);
			match(LBRACE);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 9)) & ~0x3f) == 0 && ((1L << (_la - 9)) & 2440950998043722787L) != 0)) {
				{
				{
				setState(153);
				beforeContent();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeforeContentContext extends ParserRuleContext {
		public VarDefContext varDef() {
			return getRuleContext(VarDefContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public BeforeContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beforeContent; }
	}

	public final BeforeContentContext beforeContent() throws RecognitionException {
		BeforeContentContext _localctx = new BeforeContentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_beforeContent);
		try {
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				varDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				expr(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				ifStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				textLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PromptDSLParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(PromptDSLParser.EQUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(ID);
			setState(168);
			match(EQUAL);
			setState(169);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemSectionContext extends ParserRuleContext {
		public TerminalNode SYSTEM() { return getToken(PromptDSLParser.SYSTEM, 0); }
		public TerminalNode LBRACE() { return getToken(PromptDSLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PromptDSLParser.RBRACE, 0); }
		public List<TerminalNode> ID() { return getTokens(PromptDSLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PromptDSLParser.ID, i);
		}
		public List<SysContentContext> sysContent() {
			return getRuleContexts(SysContentContext.class);
		}
		public SysContentContext sysContent(int i) {
			return getRuleContext(SysContentContext.class,i);
		}
		public SystemSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemSection; }
	}

	public final SystemSectionContext systemSection() throws RecognitionException {
		SystemSectionContext _localctx = new SystemSectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_systemSection);
		int _la;
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				match(SYSTEM);
				setState(172);
				match(LBRACE);
				setState(174); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(173);
					match(ID);
					}
					}
					setState(176); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(178);
				match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				match(SYSTEM);
				setState(180);
				match(LBRACE);
				setState(182); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(181);
					sysContent();
					}
					}
					setState(184); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( ((((_la - 9)) & ~0x3f) == 0 && ((1L << (_la - 9)) & 2440950998044783651L) != 0) );
				setState(186);
				match(RBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SysContentContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ParamPathContext paramPath() {
			return getRuleContext(ParamPathContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public TerminalNode ARRAY_OUTPUTSPEC() { return getToken(PromptDSLParser.ARRAY_OUTPUTSPEC, 0); }
		public TerminalNode OUTPUTSPEC() { return getToken(PromptDSLParser.OUTPUTSPEC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TextLineContext textLine() {
			return getRuleContext(TextLineContext.class,0);
		}
		public SysContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sysContent; }
	}

	public final SysContentContext sysContent() throws RecognitionException {
		SysContentContext _localctx = new SysContentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sysContent);
		try {
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(190);
				ifStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				paramPath();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(192);
				forStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(193);
				match(ARRAY_OUTPUTSPEC);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(194);
				match(OUTPUTSPEC);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(195);
				expr(0);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(196);
				textLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
